- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.14.0 Beta 1
- 
    None
- 
        
- 
        450f2b3dd32e6b8374f404dbc2968f31bcbc3be7 (qt/qtmqtt/5.15)
Since 5.14 we introduced autokeepalive, which manages pings. It is not possible to send manual pings unless autokeepalive is disabled.
As the examples are showcasing the simple usages, remove the ping button as it feels like an error to not receive a pong, while it is not.