Examples: Remove ping buttons

Since dcf3bbb9802f9adf79ae08d5d697b3ded3f0cb97 introduced
autoKeepAlive, users should not send a ping message manually
unless it is disabled.

Change-Id: I4b717e2aebc8f40cabf009d4df7e1d146988d434
Fixes: QTBUG-79444
Reviewed-by: hjk <hjk@qt.io>